# computer-graphics

./: .gitignore  CMakeLists.txt  README.md  animation.sh  cornell-box-mirror.mtl  hackspace.mtl  mvb.sh  subtitle.ass  textured-cornell-box.mtl
libs/sdw/: CanvasPoint.cpp  CanvasPoint.h  CanvasTriangle.cpp  CanvasTriangle.h  Colour.cpp  Colour.h  DrawingWindow.cpp  DrawingWindow.h  ModelTriangle.cpp  ModelTriangle.h  RayTriangleIntersection.cpp  RayTriangleIntersection.h  TextureMap.cpp  TextureMap.h  TexturePoint.cpp  TexturePoint.h  Utils.cpp  Utils.h
src/: AnimationDriver.cpp  AnimationDriver.h  Camera.cpp  Camera.h  DepthBufferedWindow.cpp  DepthBufferedWindow.h  LightingConfiguration.cpp  LightingConfiguration.h  LineSegment.cpp  LineSegment.h  ObjFile.cpp  ObjFile.h  RasterisedRenderer.cpp  RasterisedRenderer.h  RaytracedRenderer.cpp  RaytracedRenderer.h  Renderer.cpp  Renderer.h  WireframeRenderer.cpp  WireframeRenderer.h  main.cpp  main.h
tests/: LightingConfigurationTest.cpp  UtilsTest.cpp
